# chip8emulator

./: .gitignore  CMakeLists.txt
src/: chip8.c  chip8.h  main.c
